core/roboconf-core/src/test/resources/configurations/invalid/component-self-imports.graph
A {
	alias: A component called A;
	installer: target;
	exports: port, ip;
	imports: A.port, A.ip; 
}
